[package]
name = "proxy"
version = "1.0.0"
edition = "2021"

[lib]
name = "version"
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3.9", features = [
    "libloaderapi", 
    "sysinfoapi", 
    "winnt", 
    "processthreadsapi", 
    "winbase", 
    "fileapi", 
    "handleapi",
    "minwindef",
    "basetsd",
    "ntdef",
    "errhandlingapi",
] }

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
